[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-huffc"
version = "0.1.0"
dependencies = ["requests", "semantic-version"]
optional-dependencies = {dev = ["black", "flake8", "isort", "pre-commit"]}

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
